mobile fix: overflow

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,7 +20,7 @@ $styled-text-color: yellow;
 
 html, body {
 	background: $bg-color;
-	overflow:hidden;
+	overflow-x: hidden;
 }
 
 .noshow {
